feat: add use creation
