# handlers/requests/create-user.go
@@ -1,0 +1,14 @@
+package requests
+
+type CreateUserRequest struct {
+
+	// Name of the user
+	// required: true
+	Name string `json:"name" validate:"required"`
+	// Username of the user
+	// required: true
+	Username string `json:"username" validate:"required"`
+	// Password of the user
+	// required: true
+	Password string `json:"password" validate:"required"`
+}
