# handlers/responses/create-user.go
@@ -1,0 +1,7 @@
+package responses
+
+type CreateUserResponse struct {
+	ID       int    `json:"id"`
+	Name     string `json:"name"`
+	Username string `json:"username"`
+}
